Update Component : Select

--- a/libs/components/select/viz-select.component.scss
+++ b/libs/components/select/viz-select.component.scss
@@ -195,6 +195,7 @@
     .mat-icon {
       width: $icon-small-size !important;
       height: $icon-small-size !important;
+      color: #000000;
     }
 
     .material-icons {
