--- a/libs/components/select/viz-select.component.html
+++ b/libs/components/select/viz-select.component.html
@@ -38,7 +38,7 @@
     <mat-label>{{placeholder}}</mat-label>
     <input matInput type="text" placeholder="Clearable input" [value]="selected.title" autocomplete="off">
     <button class="select-direction" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-      <mat-icon>arrow_drop_up</mat-icon>
+      <mat-icon>{{selectTrigger.menuOpen ? 'arrow_drop_up' : 'arrow_drop_down'}}</mat-icon>
     </button>
   </mat-form-field>
 
