--- a/src/assets/examples/toolbar-basic/toolbar-basic.component.html
+++ b/src/assets/examples/toolbar-basic/toolbar-basic.component.html
@@ -1,4 +1,10 @@
 <div class="toolbarWrapper">
-  <viz-toolbar placeholderText="Title" (searchBtnClick)="seachOnClick($event)">
-  </viz-toolbar>
+  <mat-toolbar class="mat-elevation-z4">
+    <span class="example-title">Title</span>
+  
+    <!-- This fills the remaining space of the current row -->
+    <span class="example-fill-remaining-space"></span>
+  
+    <mat-icon class="example-icon">search</mat-icon>
+  </mat-toolbar>
 </div>
