Fix bug : Footer --> incorrect design. Please see reference link

--- a/src/assets/examples/footer-basic/footer-basic.component.html
+++ b/src/assets/examples/footer-basic/footer-basic.component.html
@@ -1,1 +1,3 @@
-<viz-footer [brands]="options"></viz-footer>
+<div class="example-container">
+    <viz-footer [brands]="options"></viz-footer>
+</div>
