--- a/src/assets/examples/tree-basic/tree-basic.component.html
+++ b/src/assets/examples/tree-basic/tree-basic.component.html
@@ -10,7 +10,7 @@
     </mat-icon> -->
     <button mat-icon-button (click)="node.isExpanded = !node.isExpanded" [attr.aria-label]="'toggle ' + node.name" matTreeNodeToggle>
       <mat-icon class="mat-icon-rtl-mirror">
-        {{node.isExpanded ? 'arrow_drop_down' : 'arrow_drop_up'}}
+        {{node.isExpanded ? 'arrow_drop_up' : 'arrow_drop_down'}}
       </mat-icon>
     </button>
     <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
