--- a/libs/style.scss
+++ b/libs/style.scss
@@ -370,8 +370,6 @@ body{
   }
 }
 
-
-
 //tabs
 .mat-tab-list{
   .mat-tab-labels{
@@ -391,5 +389,25 @@ body{
   }
   .mat-tab-label-active{
     color: #696969;
+  }
+}
+
+//tooltip
+*[mattooltip]{
+  cursor: pointer;
+}
+.cdk-overlay-pane.mat-tooltip-panel {
+  .mat-tooltip{
+    background-color: #696969;
+    font-family: soleto;
+    font-weight: 300;
+    color: #ffffff;
+    font-size: 12px;
+    line-height: 24px;
+    height: 24px;
+    padding: 0 8px;
+    white-space: nowrap;
+    width: auto;
+    max-width: none;
   }
 }
