--- a/src/assets/examples/progress-bar-basic/progress-bar-basic.component.html
+++ b/src/assets/examples/progress-bar-basic/progress-bar-basic.component.html
@@ -1,1 +1,1 @@
-<mat-progress-bar mode="determinate" value="50" color="accent"></mat-progress-bar>
+<mat-progress-bar mode="indeterminate" color="accent"></mat-progress-bar>
