Fix bug : Login. -> Incorect spec and spacing. please see reference link

--- a/libs/components/login/viz-login.component.scss
+++ b/libs/components/login/viz-login.component.scss
@@ -7,18 +7,19 @@
     box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.1);
     .wrapper {
       display: inline-flex;
-      width: 280px;
+      width: 360px;
       justify-content: flex-start; 
       align-items: center;
       flex-direction: column;
     }
     .logo {
-      line-height: 116px;
+      // line-height: 116px;
+      margin: 32px 0px;
       display: inline-block;
     }
     .mat-form-field {
       display: inline-block;
-      width: 280px;
+      width: 360px;
     }
     .login-btn {
       height: 44px;
@@ -26,6 +27,7 @@
       width: 100%;
     }
     .forgot-pwd-link {
+      width: 360px;
       color: #7f5eba;
       margin-top: 16px;
       display: block;
