--- a/libs/style.scss
+++ b/libs/style.scss
@@ -411,3 +411,39 @@ body{
     max-width: none;
   }
 }
+
+//paginator
+.mat-paginator{
+  line-height: 24px;
+  .mat-paginator-container{
+    min-height: none;
+  }
+  .mat-paginator-page-size-label{
+    margin-left: 0px;
+    margin-right: 24px;
+  }
+  .mat-paginator-page-size-select{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .mat-paginator-range-label{
+    margin-left: 32px;
+  }
+  .mat-form-field-underline{
+    display: none;
+  }
+  .mat-paginator-range-actions{
+    .mat-icon-button{
+      line-height: 24px;
+      height: 24px;
+      width: 24px;
+      margin-top: -3px;
+      .mat-paginator-icon{
+        width: 24px;
+      }
+    }
+  }
+  .mat-paginator-navigation-next{
+    margin-left: 24px;
+  }
+}
