--- a/libs/style.scss
+++ b/libs/style.scss
@@ -1,5 +1,6 @@
 @import '../node_modules/@angular/material/theming';
 @include mat-core();
+@import 'viz-color';
 $small-breakpoint-width: 720px;
 
 /* For desktop, the content should be aligned with the page title. */
@@ -7,157 +8,164 @@ $content-padding-side: 70px;
 $content-padding-side-xs: 15px;
 
 $font-grey: #696969;
-$bg-grey: #F8F8F8;
-$orange: #FF9933;
-$red: #FF3333;
-$yellow: #FFC02E;
-$green: #9CD020;
+$bg-grey: #f8f8f8;
+$orange: #ff9933;
+$red: #ff3333;
+$yellow: #ffc02e;
+$green: #9cd020;
 
 $contentHeight: calc(100vh - 146px);
 
 $mat-vpurple: (
-  50 : #f0ecf7,
-  100 : #d9cfea,
-  200 : #bfafdd,
-  300 : #a58ecf,
-  400 : #9276c4,
-  500 : #7f5eba,
-  600 : #7756b3,
-  700 : #6c4cab,
-  800 : #6242a3,
-  900 : #4f3194,
-  A100 : #e6dcff,
-  A200 : #c2a9ff,
-  A400 : #9d76ff,
-  A700 : #8b5dff,
+  50: #f0ecf7,
+  100: #d9cfea,
+  200: #bfafdd,
+  300: #a58ecf,
+  400: #9276c4,
+  500: #7f5eba,
+  600: #7756b3,
+  700: #6c4cab,
+  800: #6242a3,
+  900: #4f3194,
+  A100: #e6dcff,
+  A200: #c2a9ff,
+  A400: #9d76ff,
+  A700: #8b5dff,
   contrast: (
-    50 : #000000,
-    100 : #000000,
-    200 : #000000,
-    300 : #000000,
-    400 : #000000,
-    500 : #ffffff,
-    600 : #ffffff,
-    700 : #ffffff,
-    800 : #ffffff,
-    900 : #ffffff,
-    A100 : #000000,
-    A200 : #000000,
-    A400 : #000000,
-    A700 : #ffffff,
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #000000,
+    400: #000000,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+    A700: #ffffff
   )
 );
 $mat-vblue: (
-  50 : #e1f5f5,
-  100 : #b3e6e6,
-  200 : #80d6d5,
-  300 : #4dc6c4,
-  400 : #27b9b8,
-  500 : #01adab,
-  600 : #01a6a4,
-  700 : #019c9a,
-  800 : #019391,
-  900 : #008380,
-  A100 : #b0fffd,
-  A200 : #7dfffc,
-  A400 : #4afffa,
-  A700 : #30fffa,
+  50: #e1f5f5,
+  100: #b3e6e6,
+  200: #80d6d5,
+  300: #4dc6c4,
+  400: #27b9b8,
+  500: #01adab,
+  600: #01a6a4,
+  700: #019c9a,
+  800: #019391,
+  900: #008380,
+  A100: #b0fffd,
+  A200: #7dfffc,
+  A400: #4afffa,
+  A700: #30fffa,
   contrast: (
-    50 : #000000,
-    100 : #000000,
-    200 : #000000,
-    300 : #000000,
-    400 : #000000,
-    500 : #ffffff,
-    600 : #ffffff,
-    700 : #ffffff,
-    800 : #ffffff,
-    900 : #ffffff,
-    A100 : #000000,
-    A200 : #000000,
-    A400 : #000000,
-    A700 : #000000,
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #000000,
+    400: #000000,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+    A700: #000000
   )
 );
 
 $mat-vred: (
-  50 : #ffe7e7,
-  100 : #ffc2c2,
-  200 : #ff9999,
-  300 : #ff7070,
-  400 : #ff5252,
-  500 : #ff3333,
-  600 : #ff2e2e,
-  700 : #ff2727,
-  800 : #ff2020,
-  900 : #ff1414,
-  A100 : #ffffff,
-  A200 : #fffbfb,
-  A400 : #ffc8c8,
-  A700 : #ffaeae,
+  50: #ffe7e7,
+  100: #ffc2c2,
+  200: #ff9999,
+  300: #ff7070,
+  400: #ff5252,
+  500: #ff3333,
+  600: #ff2e2e,
+  700: #ff2727,
+  800: #ff2020,
+  900: #ff1414,
+  A100: #ffffff,
+  A200: #fffbfb,
+  A400: #ffc8c8,
+  A700: #ffaeae,
   contrast: (
-    50 : #000000,
-    100 : #000000,
-    200 : #000000,
-    300 : #000000,
-    400 : #000000,
-    500 : #ffffff,
-    600 : #ffffff,
-    700 : #ffffff,
-    800 : #ffffff,
-    900 : #ffffff,
-    A100 : #000000,
-    A200 : #000000,
-    A400 : #000000,
-    A700 : #000000,
-)
-);
-$mat-vgrey: (
-  50 : #ededed,
-  100 : #d2d2d2,
-  200 : #b4b4b4,
-  300 : #969696,
-  400 : #808080,
-  500 : #696969,
-  600 : #616161,
-  700 : #565656,
-  800 : #4c4c4c,
-  900 : #3b3b3b,
-  A100 : #f4a0a0,
-  A200 : #ef7272,
-  A400 : #ff3030,
-  A700 : #ff1616,
-  contrast: (
-    50 : #000000,
-    100 : #000000,
-    200 : #000000,
-    300 : #000000,
-    400 : #000000,
-    500 : #ffffff,
-    600 : #ffffff,
-    700 : #ffffff,
-    800 : #ffffff,
-    900 : #ffffff,
-    A100 : #000000,
-    A200 : #000000,
-    A400 : #ffffff,
-    A700 : #ffffff,
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #000000,
+    400: #000000,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+    A700: #000000
   )
 );
-
+$mat-vgrey: (
+  50: #ededed,
+  100: #d2d2d2,
+  200: #b4b4b4,
+  300: #969696,
+  400: #808080,
+  500: #696969,
+  600: #616161,
+  700: #565656,
+  800: #4c4c4c,
+  900: #3b3b3b,
+  A100: #f4a0a0,
+  A200: #ef7272,
+  A400: #ff3030,
+  A700: #ff1616,
+  contrast: (
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #000000,
+    400: #000000,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #000000,
+    A400: #ffffff,
+    A700: #ffffff
+  )
+);
 
 // $viz-app-basic: mat-palette($mat-vgrey);
 
 $viz-app-primary: mat-palette($mat-vpurple);
-$viz-app-accent:  mat-palette($mat-vblue);
+$viz-app-accent: mat-palette($mat-vblue);
 
 // The warn palette is optional (defaults to red).
-$viz-app-warn:  mat-palette($mat-vred);
-$viz-app-foreground:  mat-palette($mat-vgrey);
+$viz-app-warn: mat-palette($mat-vred);
+$viz-app-foreground: mat-palette($mat-vgrey);
 
-$viz-app-theme: mat-light-theme($viz-app-primary, $viz-app-accent, $viz-app-warn);
+$viz-app-theme: mat-light-theme(
+  $viz-app-primary,
+  $viz-app-accent,
+  $viz-app-warn
+);
 
-$viz-app-theme2: mat-light-theme($viz-app-accent, $viz-app-accent, $viz-app-warn);
+$viz-app-theme2: mat-light-theme(
+  $viz-app-accent,
+  $viz-app-accent,
+  $viz-app-warn
+);
 
 $viz-typography: mat-typography-config(
   $font-family: Soleto
@@ -183,8 +191,6 @@ $viz-typography: mat-typography-config(
 //   background-color: #f0ecf7;
 // }
 
-
-
 // .mat-expansion-indicator::after {
 //   color: #01adab;
 // }
@@ -192,21 +198,23 @@ $viz-typography: mat-typography-config(
 //   background-color: #01adab;
 // }
 .mat-simple-snackbar-action {
-  color: #FF4E00;
+  color: #ff4e00;
 }
 .mat-focused .mat-form-field-required-marker {
   color: #ff3333;
 }
-.mat-input-element, .mat-select-value {
+.mat-input-element,
+.mat-select-value {
   color: $font-grey;
 }
 .mat-tab-label {
   display: -ms-inline-flexbox;
 }
-td.mat-cell, .mat-header-cell {
-  border-bottom-color: #E9E9E9 !important;
+td.mat-cell,
+.mat-header-cell {
+  border-bottom-color: #e9e9e9 !important;
 }
-.mat-raised-button:not([class*=mat-elevation-z]){
+.mat-raised-button:not([class*='mat-elevation-z']) {
   font-weight: 400;
   box-shadow: none !important;
 }
@@ -230,8 +238,8 @@ td.mat-cell, .mat-header-cell {
           color: #8667bd;
         }
       }
-      .mat-menu-item-submenu-trigger{
-        &:hover::after{
+      .mat-menu-item-submenu-trigger {
+        &:hover::after {
           color: white;
         }
       }
@@ -239,9 +247,9 @@ td.mat-cell, .mat-header-cell {
   }
 }
 //list style
-.mat-list{
+.mat-list {
   // padding-top: 0px;
-  .mat-list-item{
+  .mat-list-item {
     // color: #696969;
     // background-color: #ffffff;
     // border-bottom: 1px solid gray;
@@ -251,10 +259,10 @@ td.mat-cell, .mat-header-cell {
     // .mat-icon{
     //   color: #9f9f9f;
     // }
-    .mat-list-item-content{
+    .mat-list-item-content {
       color: #696969;
-      font-family:Soleto;
-      font-weight:300;
+      font-family: Soleto;
+      font-weight: 300;
       font-size: 14px;
       .mat-icon {
         color: #9f9f9f;
@@ -263,17 +271,17 @@ td.mat-cell, .mat-header-cell {
     }
   }
 }
-.mat-selection-list{
-  .mat-list-item{
-    .mat-list-item-content{
-      .mat-pseudo-checkbox{
+.mat-selection-list {
+  .mat-list-item {
+    .mat-list-item-content {
+      .mat-pseudo-checkbox {
         color: #9f9f9f;
       }
       .mat-list-text {
         flex-direction: row;
         color: #696969;
-        font-family:Soleto;
-        font-weight:300;
+        font-family: Soleto;
+        font-weight: 300;
         font-size: 14px;
       }
     }
@@ -282,43 +290,42 @@ td.mat-cell, .mat-header-cell {
 
 //snackbar style
 @media screen and (max-width: 375px) {
-  .vizient-snackbar .mat-simple-snackbar{
+  .vizient-snackbar .mat-simple-snackbar {
     flex-direction: column;
   }
-  .vizient-snackbar .mat-simple-snackbar-action{
+  .vizient-snackbar .mat-simple-snackbar-action {
     align-self: flex-end;
     margin-top: 16px;
   }
 }
 
 //radio button
-.mat-radio-label-content{
+.mat-radio-label-content {
   font-size: 14px;
 }
 
 //tree style
-.mat-checkbox-label{
+.mat-checkbox-label {
   font-size: 14px;
 }
 
 //input font-size
-body{
+body {
   font-size: 14px;
 }
 .mat-form-field {
   font-size: 14px;
-  input{
+  input {
     color: #000000;
   }
 }
 
 //snackbar style
-.mat-simple-snackbar{
+.mat-simple-snackbar {
   font-family: Soleto;
   font-weight: 300;
 
-
-  .mat-button{
+  .mat-button {
     color: #ffffff;
   }
 }
@@ -326,78 +333,78 @@ body{
 //card style
 .mat-card {
   cursor: pointer;
-  &:hover{
-    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
-
+  &:hover {
+    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+      0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
   }
 }
 
 //dialog (modal)
-.cdk-overlay-pane{
-  .mat-dialog-container{
+.cdk-overlay-pane {
+  .mat-dialog-container {
     padding: 0px;
-  } 
+  }
 }
 
 //badge
-.mat-badge-content{
+.mat-badge-content {
   width: max-content !important;
   border-radius: 11px !important;
   padding: 0 3px;
   min-width: 22px;
 }
-.mat-badge-medium.mat-badge-overlap{
+.mat-badge-medium.mat-badge-overlap {
   &.mat-badge-after {
-    .mat-badge-content{
+    .mat-badge-content {
       right: auto;
       left: 50%;
     }
   }
-  &.mat-badge-above{
-    .mat-badge-content{
+  &.mat-badge-above {
+    .mat-badge-content {
       top: -50%;
     }
   }
-  &.mat-badge-before{
-    .mat-badge-content{
-      left: -50% !important
+  &.mat-badge-before {
+    .mat-badge-content {
+      left: -50% !important;
     }
   }
-  &.mat-badge-below{
-    .mat-badge-content{
+  &.mat-badge-below {
+    .mat-badge-content {
       top: 50%;
     }
   }
 }
 
 //tabs
-.mat-tab-list{
-  .mat-tab-labels{
+.mat-tab-list {
+  .mat-tab-labels {
     padding: 0px 24px;
-    .mat-tab-label{
+    .mat-tab-label {
       margin-right: 40px;
       margin-left: 0px;
     }
   }
-  .mat-ink-bar{
+  .mat-ink-bar {
     height: 4px;
   }
-  .mat-tab-label{
+  .mat-tab-label {
     color: #c3c3c3;
     font-family: soleto;
     font-weight: 500;
   }
-  .mat-tab-label-active{
+  .mat-tab-label-active {
     color: #696969;
   }
 }
 
 //tooltip
-*[mattooltip]{
+*[mattooltip] {
   cursor: pointer;
 }
 .cdk-overlay-pane.mat-tooltip-panel {
-  .mat-tooltip{
+  .mat-tooltip {
     background-color: #696969;
     font-family: soleto;
     font-weight: 300;
@@ -413,37 +420,117 @@ body{
 }
 
 //paginator
-.mat-paginator{
+.mat-paginator {
   line-height: 24px;
-  .mat-paginator-container{
+  .mat-paginator-container {
     min-height: none;
   }
-  .mat-paginator-page-size-label{
+  .mat-paginator-page-size-label {
     margin-left: 0px;
     margin-right: 24px;
   }
-  .mat-paginator-page-size-select{
+  .mat-paginator-page-size-select {
     margin-left: 0px;
     margin-right: 0px;
   }
-  .mat-paginator-range-label{
+  .mat-paginator-range-label {
     margin-left: 32px;
   }
-  .mat-form-field-underline{
+  .mat-form-field-underline {
     display: none;
   }
-  .mat-paginator-range-actions{
-    .mat-icon-button{
+  .mat-paginator-range-actions {
+    .mat-icon-button {
       line-height: 24px;
       height: 24px;
       width: 24px;
       margin-top: -3px;
-      .mat-paginator-icon{
+      .mat-paginator-icon {
         width: 24px;
       }
     }
   }
-  .mat-paginator-navigation-next{
+  .mat-paginator-navigation-next {
     margin-left: 24px;
+  }
+}
+
+//
+.viz-table {
+  width: 100%;
+
+  @mixin md-icon-size($size: 18px) {
+    font-size: $size;
+    height: $size;
+    width: $size;
+  }
+
+  .mat-icon {
+    cursor: pointer;
+    @include md-icon-size(18px);
+  }
+
+  &-head {
+    display: inline-flex;
+    align-items: center;
+    // display: inline-block;
+    text-align: left;
+    padding: 16px;
+    /* Available Contracts: */
+    font-family: Soleto;
+    font-size: 10px;
+    color: #9f9f9f;
+    letter-spacing: 1.5px;
+    line-height: 15px;
+    font-weight: 700;
+    .mat-sort-header-sorted {
+      color: #212121;
+      .mat-sort-header-arrow {
+        color: #212121;
+      }
+    }
+    &:first-child {
+      padding-left: 40px;
+    }
+    &:last-child {
+      padding-right: 20px;
+    }
+  }
+  &-row {
+    width: 100%;
+    overflow: hidden;
+    /* Rectangle 3: */
+    background: #ffffff;
+    box-shadow: 0 1px 0 0 #e9e9e9, inset 0 1px 0 0 #e9e9e9;
+  }
+  &-cell {
+    // display: inline-block;
+    text-align: left;
+    padding: 16px;
+    vertical-align: top;
+
+    display: inline-flex;
+    align-items: center;
+
+    /* Marketing: */
+    font-family: Soleto;
+    font-size: 14px;
+    color: #696969;
+    line-height: 18px;
+    font-weight: 300;
+
+    &:first-child {
+      padding-left: 40px;
+    }
+    &:last-child {
+      padding-right: 20px;
+    }
+  }
+  &-expand-row {
+
+    /* Rectangle 3 Copy 2: */
+    background: #fafafa;
+    box-shadow: 0 1px 0 0 rgba(215, 221, 229, 0.5),
+      inset 0 1px 0 0 rgba(215, 221, 229, 0.5);
   }
 }
