--- a/src/assets/examples/expansion-panel-basic/expansion-panel-basic.component.html
+++ b/src/assets/examples/expansion-panel-basic/expansion-panel-basic.component.html
@@ -1,4 +1,4 @@
-<!-- <viz-expansion-panel>
+<viz-expansion-panel>
   <viz-expansion-panel-header>
     <mat-panel-title>
       Personal data
@@ -15,5 +15,24 @@
   <mat-form-field>
     <input matInput placeholder="Age">
   </mat-form-field>
-</viz-expansion-panel> -->
+</viz-expansion-panel>
+<viz-expansion-panel>
+  <viz-expansion-panel-header>
+    <mat-panel-title>
+      Personal data
+    </mat-panel-title>
+    <mat-panel-description>
+      Type your name and age
+    </mat-panel-description>
+  </viz-expansion-panel-header>
+
+  <mat-form-field>
+    <input matInput placeholder="First name">
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Age">
+  </mat-form-field>
+</viz-expansion-panel>
+
 
