Update Component : Expansion panel

--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -24,7 +24,7 @@
     Each expansion-panel must include a header and may optionally include an action bar.
   </div>
   <div class="doc-example-container">
-    <div app-docs-example="expansion-panel-basic"></div>
+    <div app-docs-example="expansion-panel-table"></div>
   </div>
   <div class="doc-divider">
   </div>
@@ -48,16 +48,16 @@
     </thead>
     <tbody>
       <tr>
-        <td>ghost</td>
-        <td>make background transparent and invert text and border colors</td>
+        <td>vizShowExpand</td>
+        <td>Create toggle expand button control</td>
         <td>boolean</td>
-        <td>false</td>
+        <td>true</td>
       </tr>
       <tr>
-        <td>disabled</td>
-        <td>disabled state of button</td>
+        <td>vizExpand</td>
+        <td>Add expand animation to expanded target</td>
         <td>boolean</td>
-        <td>false</td>
+        <td>true</td>
       </tr>
     </tbody>
   </table>
@@ -96,12 +96,12 @@
   <div style="margin-bottom:24px">
     <div class="docs-usage-do">
       <div style="width: 100%; height: 352px" class="docs-usage-center">
-        <img  class="expansionpanel-usage" src="assets/img/doc/expansionpanel-pic-1.png" alt="">
+        <img  class="expansionpanel-usage" src="assets/img/doc/expansionpanel-do.png" alt="">
       </div>
     </div>
     <div class="docs-usage-dont docs-mt16" >
         <div style="width: 100%; height: 352px" class="docs-usage-center">
-          <img  class="expansionpanel-usage" src="assets/img/doc/expansionpanel-pic-2.png" alt="">
+          <img  class="expansionpanel-usage" src="assets/img/doc/expansionpanel-dont.png" alt="">
         </div>
       </div>
 
