--- a/libs/style.scss
+++ b/libs/style.scss
@@ -527,10 +527,17 @@ body {
     }
   }
   &-expand-row {
-
     /* Rectangle 3 Copy 2: */
     background: #fafafa;
     box-shadow: 0 1px 0 0 rgba(215, 221, 229, 0.5),
       inset 0 1px 0 0 rgba(215, 221, 229, 0.5);
+
+    &:first-child {
+      box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.07),
+        inset 0 1px 0 0 rgba(215, 221, 229, 0.5);
+    }
+    &:last-child {
+      box-shadow:  inset 0 1px 0 0 rgba(215, 221, 229, 0.5) ,inset 0 -1px 2px 0 rgba(0, 0, 0, 0.05);
+    }
   }
 }
