--- a/src/assets/examples/table-native/table-native.component.html
+++ b/src/assets/examples/table-native/table-native.component.html
@@ -8,14 +8,11 @@
 
     <ng-container *ngFor="let dessert of sortedData">
       <div class="viz-table-row">
-        <div class="viz-table-cell w70 example-first-col" viz-detail-row-expand #test>
+        <div class="viz-table-cell w70 example-first-col" vizShowExpand #test>
           {{dessert.contract}}</div>
         <div class="viz-table-cell w30">{{dessert.type}}</div>
       </div>
       <div class="viz-table-row" [vizExpand]="test.isExpanded" style="overflow:hidden">
-
-        <!-- https://stackoverflow.com/questions/37375625/how-to-animate-toggling-of-table-rows/37376274 -->
-
         <div class="viz-table">
           <div class="viz-table-expand-row" *ngFor="let subItem of dessert.subs; let i=index">
             <div class="viz-table-cell w100">
