Add get start link.

--- a/src/app/pages/homepage/homepage.html
+++ b/src/app/pages/homepage/homepage.html
@@ -4,7 +4,7 @@
       <h1>Vizient Components for the Web</h1>
       <p>The system includes the resources to create user interfaces consistent with the Vizient app principles, design language, and best practices. Rather than focusing on pixels, developers can focus on application logic, while designers can focus on user experience, interactions, and flows.</p>
       <div class="button-sec">
-        <button mat-raised-button color="primary">Get Started</button>
+        <button (click)="clickGetStart()" mat-raised-button color="primary">Get Started</button>
         <button mat-button color="primary">Components</button>
       </div>
     </div>
