Fix bug : developers page --> spell error and need to update component

--- a/src/assets/documents/components/developers.html
+++ b/src/assets/documents/components/developers.html
@@ -64,18 +64,60 @@
   </div>
   <pre class="doc-code-sec">
     <span class="hljs-keyword">import</span> { 
-      VizDateRangePickerMudule,
       VizHeaderMudule,
+      VizDateRangePickerMudule,
+      VizSelectModule,
+      VizFooterMudule,
+      VizMenuModule,
+      VizCheckboxModule,
       VizButtonModule,
-      VizFooterMudule
+      VizFormFieldModule,
+      VizTreeModule,
+      VizSliderModule,
+      VizExpansionModule,
+      VizToolbarMudule,
+      VizIconModule,
+      VizListModule,
+      VizChipModule,
+      VizBadgeModule,
+      VizTabsModule,
+      VizDialogModule,
+      VizLoginMudule,
+      VizNodataModule,
+      VizFeedbackIndicatorModule,
+      VizSidenavModule,
+      VizProgressSpinnerModule,
+      VizTableModule,
+      VizSteppersModule
     } <span class="hljs-keyword">from</span> <span class="hljs-string">'viz-toolkit'</span>;
     <span class="hljs-meta">@NgModule</span>({
       ...
       imports: [
-        VizDateRangePickerMudule,
         VizHeaderMudule,
+        VizDateRangePickerMudule,
+        VizSelectModule,
+        VizFooterMudule,
+        VizMenuModule,
+        VizCheckboxModule,
         VizButtonModule,
-        VizFooterMudule
+        VizFormFieldModule,
+        VizTreeModule,
+        VizSliderModule,
+        VizExpansionModule,
+        VizToolbarMudule,
+        VizIconModule,
+        VizListModule,
+        VizChipModule,
+        VizBadgeModule,
+        VizTabsModule,
+        VizDialogModule,
+        VizLoginMudule,
+        VizNodataModule,
+        VizFeedbackIndicatorModule,
+        VizSidenavModule,
+        VizProgressSpinnerModule,
+        VizTableModule,
+        VizSteppersModule
       ],
       ...
     })
