Add Pages : Principles

--- a/src/app/pages/principles/principles.component.html
+++ b/src/app/pages/principles/principles.component.html
@@ -1,13 +1,177 @@
 <div class="principles-wrapper">
-  <div class="principles-sec-1">
-    <h1>Vizient Principles</h1>
-    <p id="large">At Vizient, we build products to ensure our members deliver exceptional, cost-effective care. Our mission is to connect
-      members with the knowledge, solutions and expertise that accelerate performance. We work side by side with members
-      to find greater efficiency that leads to greater effectiveness.</p>
+  <div class="principles-title-1 principles-mb20">
+    Vizient Principles
   </div>
-  <div class="principles-sec-2">
-    <h1>Our Value</h1>
-    <p id="large">In executing our strategy, we operate from a dynamic set of values that drive both the performance of our enterprise and
-      the exceptional experience we want to provide — for members and each other.</p>
+  <div class="principles-desc-1">
+    At Vizient, we build products to ensure our members deliver exceptional, cost-effective care. Our mission is to connect members
+    with the knowledge, solutions and expertise that accelerate performance. We work side by side with members to find greater
+    efficiency that leads to greater effectiveness.
   </div>
+
+  <div class="principles-horizantal-line"></div>
+
+  <div class="principles-title-1 principles-mb20">
+    Our Value
+  </div>
+  <div class="principles-desc-1 principles-mb48">
+    In executing our strategy, we operate from a dynamic set of values that drive both the performance of our enterprise and
+    the exceptional experience we want to provide — for members and each other.
+  </div>
+
+  <ul class="principles-card-wrapper">
+    <li class="principles-card principles-mb48">
+      <img src="assets/img/our baseline expectations.svg" class="principles-card-img">
+      <div class="principles-title-2">
+        Our baseline expectations
+      </div>
+      <div class="principles-desc-2">
+        As our baseline expectations, we respect and treat others well as we would like to be treated. We value integrity and offer
+        diligent services. We make the right judgments to make wise decisions.
+      </div>
+    </li>
+    <li class="principles-card principles-mb48">
+      <img src="assets/img/cultural cornerstones.svg" class="principles-card-img">
+      <div class="principles-title-2">
+        Cultural cornerstones
+      </div>
+      <div class="principles-desc-2">
+        Being collaborative and able to work together is the key achieve success. We anticipate and embrace change and bring together
+        the right expertise at the right time to achieve the right result.
+      </div>
+    </li>
+    <li class="principles-card">
+      <img src="assets/img/key to our future.svg" class="principles-card-img">
+      <div class="principles-title-2">
+        Key to our future
+      </div>
+      <div class="principles-desc-2">
+        We foster a shared commitment, encourage innovations and challenges to unleash employee potential and to forge new paths
+        and solutions. We value partnership and aligned execution to guide and nurture a unified network of employees, members
+        and business partners. As well as embracing and leveraging the skills and cultural perspectives of others.
+      </div>
+    </li>
+    <li class="principles-card">
+      <img src="assets/img/behaviors that limit our potential.svg" class="principles-card-img">
+      <div class="principles-title-2">
+        Behaviors that limit our potential
+      </div>
+      <div class="principles-desc-2">
+        We can work together to prevent behaviors that negatively influence interactions — and address them when they arise such
+        as agreeing without intent to follow through, sidestep uncomfortable issues to avoid conflicts. Siloed thinking or
+        acting without thoughtful planning, creating a false sense of urgency.
+      </div>
+    </li>
+  </ul>
+
+  <div class="principles-horizantal-line"></div>
+
+  <div class="principles-title-1 principles-mb20">
+    Member needs drive our strategy
+  </div>
+  <div class="principles-desc-1 principles-mb24">
+    To be successful, we must actively listen to our members. Over the past year, we have talked with them, individually and
+    in groups. We also researched market imperatives and trends.
+  </div>
+  <ul class="principles-strategy principles-mb24">
+    <li class="principles-strategy-item principles-desc-2 principles-mb24">
+      <span class="principles-orange">Cost:</span> Ensure a sustainable cost structure
+    </li>
+    <li class="principles-strategy-item principles-desc-2 principles-mb24">
+      <span class="principles-orange">Variation:</span> Reduce unnecessary clinical and operational variation
+    </li>
+    <li class="principles-strategy-item principles-desc-2 principles-mb24">
+      <span class="principles-orange">Quality:</span> Improve clinical outcomes
+    </li>
+    <li class="principles-strategy-item principles-desc-2 principles-mb24">
+      <span class="principles-orange">Strategy:</span> Execute strategies for market success
+    </li>
+  </ul>
+  <div class="principles-desc-2 principles-width800">
+    We are the nation’s largest member — driven, health care performance improvement company. Vizient serves a diverse mix of
+    health care providers, including academic medical centers, pediatric facilities, community hospitals, integrated health
+    delivery networks and nonacute facilities. We work for them, and with them, to ensure delivery of exceptional, cost-effective
+    care for patients and communities nationwide.
+  </div>
+
+  <div class="principles-horizantal-line"></div>
+
+  <div class="principles-title-1 principles-mb20">
+    Vizient’s solution framework
+  </div>
+  <div class="principles-desc-1 principles-mb24 principles-width800">
+    Designed to fulfill our purpose to ensure our members deliver exceptional, cost-effective care and tailoring solutions to
+    evolving member needs.
+  </div>
+  <div class="principles-desc-2 principles-width800">
+    This framework illustrates how Vizient helps members with one of their greatest challenges: solving the care equation. Providers
+    must define their specific care equation, factoring in their situation, geography, patient mix and care delivery model.
+    But ultimately they are all looking for the best way to deliver high-quality, affordable care to families and communities.
+    Vizient can help them achieve this.
+  </div>
+  <div class="principles-desc-2 principles-width principles-mb16 principles-width800">
+    The framework—anchored around our performance improvement platforms—is flexible to answer members’ needs with the solutions
+    we offer. Ultimately, it all adds up to tailored solutions that enable them to progress from where they are to where
+    they want to be.
+  </div>
+
+  <img src="assets/img/solution.svg" alt="">
+
+  <div class="principles-horizantal-line"></div>
+
+  <div class="principles-title-1 principles-mb20 principles-width800">
+    Our performance improvement platforms position members for success
+  </div>
+  <div class="principles-desc-2 principles-mb48 principles-width800">
+    To ensure members are positioned to deliver exceptional, cost-effective care, we have defined four performance improvement
+    platforms that are our basis for building and delivering Vizient solutions and services. These emerge directly from member
+    needs and leverage our organization’s foundational capabilities in sourcing, analytic, advisory and collaboration services.
+    The performance improvement platforms encompass specific outcomes that members seek in their journey to peak performance.
+  </div>
+
+  <ul class="principles-card-wrapper">
+    <li class="principles-card principles-mb48">
+      <img src="assets/img/optimize supply operations.svg" class="principles-card-img">
+      <div class="principles-title-2">
+        Optimize supply operations
+      </div>
+      <ul class="principles-desc-2 principles-performance-sub-list">
+        <li>Lower supply costs</li>
+        <li>Achieve clinical-supply integration</li>
+        <li>Drive operational efficiencies</li>
+      </ul>
+    </li>
+    <li class="principles-card principles-mb48">
+      <img src="assets/img/improve care delivery.svg" class="principles-card-img">
+      <div class="principles-title-2">
+        Cultural cornerstones
+      </div>
+      <ul class="principles-desc-2 principles-performance-sub-list">
+        <li>Balance quality and total cost of care</li>
+        <li>Reduce non-value-added clinical variation</li>
+        <li>Optimize service line performance</li>
+      </ul>
+    </li>
+    <li class="principles-card">
+      <img src="assets/img/maximize pharmacy performance.svg" class="principles-card-img">
+      <div class="principles-title-2">
+        Key to our future
+      </div>
+      <ul class="principles-desc-2 principles-performance-sub-list">
+        <li>Stabilize pharmacy spend</li>
+        <li>Improve clinical pharmacy care</li>
+        <li>Drive incremental revenue</li>
+      </ul>
+    </li>
+    <li class="principles-card">
+      <img src="assets/img/evolve strategies to grow & compete.svg" class="principles-card-img">
+      <div class="principles-title-2">
+        Behaviors that limit our potential
+      </div>
+      <ul class="principles-desc-2 principles-performance-sub-list">
+        <li>Develop an effective system of care</li>
+        <li>Design new clinical and business models</li>
+        <li>Align with physicians and strategic partners</li>
+      </ul>
+    </li>
+  </ul>
 </div>
