Add Components : Designers

--- a/src/document.scss
+++ b/src/document.scss
@@ -58,6 +58,9 @@ a {
   background: #f3f3f3;
   // padding-right: 44px;
 }
+.doc-desc-2-highlight-text {
+  color: #FF4E00
+}
 .doc-example-container {
   /* Rectangle 3: */
   background: #ffffff;
