Add Components : Bottom Sheet

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -455,7 +455,7 @@ body {
   }
 }
 
-//
+//table
 .viz-table {
   width: 100%;
 
@@ -537,7 +537,10 @@ body {
         inset 0 1px 0 0 rgba(215, 221, 229, 0.5);
     }
     &:last-child {
-      box-shadow:  inset 0 1px 0 0 rgba(215, 221, 229, 0.5) ,inset 0 -1px 2px 0 rgba(0, 0, 0, 0.05);
+      box-shadow: inset 0 1px 0 0 rgba(215, 221, 229, 0.5),
+        inset 0 -1px 2px 0 rgba(0, 0, 0, 0.05);
     }
   }
 }
+
+
