--- a/src/assets/documents/components/developers.html
+++ b/src/assets/documents/components/developers.html
@@ -64,10 +64,10 @@
   </div>
   <pre class="doc-code-sec">
     <span class="hljs-keyword">import</span> { 
-      VizHeaderMudule,
-      VizDateRangePickerMudule,
+      VizHeaderModule,
+      VizDateRangePickerModule,
       VizSelectModule,
-      VizFooterMudule,
+      VizFooterModule,
       VizMenuModule,
       VizCheckboxModule,
       VizButtonModule,
@@ -75,14 +75,14 @@
       VizTreeModule,
       VizSliderModule,
       VizExpansionModule,
-      VizToolbarMudule,
+      VizToolbarModule,
       VizIconModule,
       VizListModule,
       VizChipModule,
       VizBadgeModule,
       VizTabsModule,
       VizDialogModule,
-      VizLoginMudule,
+      VizLoginModule,
       VizNodataModule,
       VizFeedbackIndicatorModule,
       VizSidenavModule,
@@ -93,10 +93,10 @@
     <span class="hljs-meta">@NgModule</span>({
       ...
       imports: [
-        VizHeaderMudule,
-        VizDateRangePickerMudule,
+        VizHeaderModule,
+        VizDateRangePickerModule,
         VizSelectModule,
-        VizFooterMudule,
+        VizFooterModule,
         VizMenuModule,
         VizCheckboxModule,
         VizButtonModule,
@@ -104,14 +104,14 @@
         VizTreeModule,
         VizSliderModule,
         VizExpansionModule,
-        VizToolbarMudule,
+        VizToolbarModule,
         VizIconModule,
         VizListModule,
         VizChipModule,
         VizBadgeModule,
         VizTabsModule,
         VizDialogModule,
-        VizLoginMudule,
+        VizLoginModule,
         VizNodataModule,
         VizFeedbackIndicatorModule,
         VizSidenavModule,
