--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -17,6 +17,7 @@
           font-weight: 300;
           font-size: 48px;
           line-height: 1.3;
+          color: #000000;
         }
         %normal-font {
           font-size: 20px;
