--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -26,12 +26,15 @@
       <!-- TODO(jelbourn): don't hard-code the html + ts + css structure -->
       <mat-tab *ngFor="let extension of ['HTML', 'TS']" [label]="extension === 'TS' ? 'AngularJS' : extension" >
         <div class="docs-example-source-wrapper">
+          
           <button mat-icon-button type="button" class="docs-example-source-copy" [class.docs-example-source-copy-active]="copyFocus" title="Copy example source" aria-label="Copy example source to clipboard"
             matTooltip="Copy code"
             (click)="copySource(viewer.textContent)">
-            <!-- <img src="assets/img/copy-icon.svg" alt=""> -->
-            <mat-icon>file_copy</mat-icon>
+            <img *ngIf="!copyFocus" src="assets/img/copy-icon.svg" alt="">
+            <img *ngIf="copyFocus" src="assets/img/copy-icon-active.svg" alt="">
           </button>
+
+
           <pre class="docs-example-source"><doc-viewer
               #viewer [documentUrl]="exampleFileUrl(extension)"></doc-viewer></pre>
         </div>
