--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -45,32 +45,26 @@
 }
 
 .docs-example-source-copy {
-  position: absolute;
-  top: 12px;
-  right: 10px;
-  color: #c3c3c3;
-  mat-icon {
-    height: 16px;
-    width: 16px;
-    font-size: 16px;
-    line-height: 1;
-  }
-  &-active {
-    mat-icon {
-      color: #000000;
-    }
+  float: right;
+  line-height: 18px;
+  height: 18px;
+  width: 18px;
+  img{
+    height: 18px;
+    width: 18px;
   }
 }
 .docs-example-viewer-source {
   ::ng-deep {
     .mat-tab-body-wrapper {
       background: #f8f8f8;
+      padding: 24px;
     }
   }
 }
 
 .docs-example-source {
-  padding: 16px 20px;
+  // padding: 16px 20px;
   min-height: 64px;
   line-height: 30px;
   margin: 0 0 0 0;
