--- a/libs/style.scss
+++ b/libs/style.scss
@@ -310,13 +310,71 @@ td.mat-cell,
 }
 
 //input font-size
-body {
-  font-size: 14px;
-}
+// body {
+//   font-size: 14px;
+// }
+// .mat-form-field {
+//   font-size: 14px;
+//   input {
+//     color: #000000;
+//   }
+// }
 .mat-form-field {
-  font-size: 14px;
-  input {
+  &.mat-focused {
+    .mat-form-field-suffix {
+      .mat-icon {
+        color: #000000;
+      }
+    }
+  }
+
+  .mat-input-element {
+    height: 24px;
+    // padding: 5px 0px;
+    line-height: 24px;
+    vertical-align: middle;
+    cursor: pointer;
     color: #000000;
+  }
+  .mat-form-field-label {
+    height: 21.333px;
+    line-height: 21.333px;
+    font-size: 16px;
+    margin-bottom: 1px;
+  }
+  .mat-form-field-flex {
+    align-items: stretch;
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-infix {
+    margin-bottom: 5px;
+    padding-bottom: 0px;
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-wrapper {
+    padding-bottom: 0px;
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-underline {
+    bottom: 0px;
+  }
+  .mat-icon {
+    margin-top: 17px;
+  }
+  .mat-datepicker-toggle {
+    margin-top: 17px;
+    display: block;
+    color: #9f9f9f;
+  }
+
+  .mat-form-field-appearance-legacy .mat-form-field-label {
+    color: #9f9f9f;
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-underline {
+    background-color: #c3c3c3;
+  }
+
+  &:hover {
+    .mat-form-field-underline {
+      background-color: #000000;
+    }
   }
 }
 
