--- a/libs/style.scss
+++ b/libs/style.scss
@@ -601,6 +601,46 @@ td.mat-cell,
   }
 }
 
+//side nav
+.viz-sidenav {
+  width: 300px;
+  text-align: left;
+  &-header {
+    padding: 24px;
+    /* Headline 6: */
+    font-family: Soleto;
+    font-weight: 400;
+    font-size: 18px;
+    color: #000000;
+    border-bottom: 1px solid #f1f1f1;
+  }
+  &-group {
+    padding: 24px;
+    border-bottom: 1px solid #f1f1f1;
+  }
+  &-group-header {
+    /* My Orders: */
+    font-family: Soleto;
+    font-size: 10px;
+    color: #000000;
+    letter-spacing: 1.5px;
+    line-height: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+  }
+  &-group-item {
+    display: flex;
+    align-items: center;
+    height: 48px;
+    font-family: Soleto;
+    font-weight: 400;
+    font-size: 14px;
+    color: #696969;
+    line-height: 48px;
+  }
+}
+
 //Typography: Styles
 .viz-h1 {
   /* Headline H1: */
