Fix Bug : Sidenav route issue

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -638,6 +638,8 @@ td.mat-cell,
     font-size: 14px;
     color: #696969;
     line-height: 48px;
+    outline: none;
+    cursor: pointer;
   }
 }
 
