--- a/src/assets/examples/sidenav-basic/sidenav-basic.component.html
+++ b/src/assets/examples/sidenav-basic/sidenav-basic.component.html
@@ -7,7 +7,10 @@
       <div class="viz-sidenav-group-header">
         {{nav.name}}
       </div>
-      <div class="viz-sidenav-group-item" *ngFor="let subNav of nav.subs; let i=index">
+      <div class="viz-sidenav-group-item" *ngFor="let subNav of nav.subs; let i=index" 
+        [routerLink]="subNav.value" 
+        routerLinkActive
+        #rla="routerLinkActive" [class.active]="rla.isActive">
         <mat-icon class="example-icon">{{subNav.icon}}</mat-icon>
         {{subNav.name}}
       </div>
