Fix Bug : Global: Sidebar menu  --> please re-order the menu. please see reference link

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -221,9 +221,9 @@ td.mat-cell,
 .mat-sort-header-arrow {
   margin-left: 4px !important;
 }
-.mat-button-wrapper {
-  font-weight: 300 !important;
-}
+// .mat-button-wrapper {
+//   font-weight: 300 !important;
+// }
 // menu style
 .cdk-overlay-pane {
   .mat-menu-panel {
