--- a/src/app/app.theme.scss
+++ b/src/app/app.theme.scss
@@ -199,6 +199,6 @@ td.mat-cell, .mat-header-cell {
 .mat-sort-header-arrow {
   margin-left: 4px !important;
 }
-.mat-button-wrapper {
-  font-weight: 300 !important;
-}
+// .mat-button-wrapper {
+//   font-weight: 300 !important;
+// }
