Update Input style

--- a/libs/components/search/viz-search.component.html
+++ b/libs/components/search/viz-search.component.html
@@ -8,8 +8,7 @@
     <span class="viz-search-type-name">{{type}}</span>
     <button class="viz-search-type-drop-icon"
             mat-button
-            mat-icon-button
-            (click)="value=''">
+            mat-icon-button>
       <mat-icon>{{typeMenuTrigger.menuOpen ? "arrow_drop_up" : "arrow_drop_down"}}</mat-icon>
     </button>
   </span>
